examples/good/for.ypl
main(): {
    for (i=0; to 10): {
        out(i);
        i=i+4;
    }
}