examples/bad/args.ypl
sum(a, b): {
    return a+b;
}

main(): {
    out(sum(1));
}
